syntax = "proto3";
package model;
option go_package = "/model/pb";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string uom = 4;
  string image = 5;
  double price = 6;
  int64 stock = 7;
  int64 createdAt = 8;
  int64 updatedAt = 9;
  int64 discardedAt = 10;
}

message FindProductByIdRequest {
  string id = 1;
}

message FindProductsRequest {
  repeated string productIds = 1;
  repeated string productName = 2;
  int64 limit = 3;
  int64 page = 4;
}

message FindProductsResponse {
  repeated Product products = 1;
  int64 total = 2;
}

message UpdateProductStockByProductIdRequest {
  string productId = 1;
  int64 quantity = 2;
}

message FindProductsByProductIdsResponse {
  map<string, Product> products = 1;
}

message FindProductsByProductIdsRequest{
  repeated string productIds = 1;
}